--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello world
+<html>
+  <head>
+    <title>Gavin's Website</title>
+  </head>
+  <body>
+    <h1>Gavin's Website</h1>
+    <table>
+      <tr>
+	<td>
+	  <img height="600px" alt="Gavin" src="gavin.jpg"/>
+	</td>
+	<td valign="middle">
+	  <img height="400px" alt="Happy Birthday!" src="happy-birthday.gif"/>
+	</td>
+      </tr>
+    </table>
+  </body>
+</html>
