He's the coolest kid in town

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Gavin's Website</h1>
+    <h2><font color="blue">The coolest kid in town...</font></h2>
     <img height="600px" alt="Gavin" src="gavin.jpg"/>
     <img height="400px" alt="Happy Birthday!" src="happy-birthday.gif"/>
   </body>
