--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
   <head>
     <title>Gavin's Website</title>
   </head>
-  <body>
+  <body bgcolor="rainbow">
     <h1>Gavin's Website</h1>
     <h2><font color="blue">The coolest kid in town...</font></h2>
     <p>He's a legend!!!!!!!! </p>
     <img height="600px" alt="Gavin" src="gavin.jpg"/>
+   <p> ME AT COFFEE AND ICECREAM BAR!!!</p>
+
+  <h1>cool sites</h1>
+  <ul>
+    <li><a href='http://scratch.mit.edu'>scratch</a></li>
+    <li><a href='https://www.nba.com/sixers/'>sixers</a></li>
+     <li><a href='https://www.amazon.com'>amazon</a></li>
+     <li><a href='https://www.wcasd.net/Domain/602'>wcasd</a></li>
+  </ul>
+
+
   </body>
 </html>
