--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <li><a href='https://www.nba.com/sixers/'>sixers</a></li>
      <li><a href='https://www.amazon.com'>amazon</a></li>
      <li><a href='https://www.wcasd.net/Domain/602'>wcasd</a></li>
+      <li><a href='https://www.mathplayground.com/logicgames.html'>mathplayground</a></li>
+
   </ul>
+
 
 
   </body>
